--- a/yes_page.html
+++ b/yes_page.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Yay!!! See you on the 14th! 🥰</h1>
-        <img class="success-image" src="https://media.giphy.com/media/lNy6398b/giphy.gif" alt="Happy Valentines Cat">
+        <img class="success-image" src="https://media.tenor.com/gU9vBySAn9wAAAAC/khai-anh-love-you.gif" alt="Cute Cats Hugging">
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
@@ -23,3 +23,4 @@
     </script>
 </body>
 </html>
+
