--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
-    <title>Hi, Pineapple! Will you be my Valentine?</title>
+    <title>Will you be my Valentine?</title>
     <link rel="stylesheet" href="style.css"> </head>
 <body>
     <div class="container">
-        <h1>Will you be my Valentine? ❤️</h1>
+        <h1>Hi, Pineapple! Will you be my Valentine? ❤️</h1>
         <div class="buttons">
             <button class="yes-button" onclick="handleYesClick()">Yes</button>
             <button class="no-button" onclick="handleNoClick()">No</button>
@@ -16,3 +16,4 @@
 </body>
 
 </html>
+
