Change success image to 'pineapple.jpg'
Updated image source to use 'pineapple.jpg' instead of the GIF.

--- a/yes_page.html
+++ b/yes_page.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Yay!!! See you on the 14th! 🥰</h1>
-        <img class="success-image" src="https://media.tenor.com/images/737e3352932338162238380e227a1e09/tenor.gif" alt="Cute Cats Hugging">
+    <h1>Yay!!! See you on the 14th! 🥰</h1>
+    <img class="success-image" src="pineapple.jpg" alt="Our Photo">
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
@@ -23,3 +23,4 @@
     </script>
 </body>
 </html>
+
